parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ERROR
    ERROR_IDENTIFICADOR
    ERROR_IDENTIFICADOR_SIM
    FALS
    IGUAL
    IMPBOOL
    IN
    INTER
    LEERBOOL
    LEERCAD
    NOT
    OR
    SIGDIF
    SIGMAYOR
    SIGMENOR
    TIPO
    UNION
    VERD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROG ID programa_decl
Rule 2     programa_decl -> declaraciones cuerpo_programa
Rule 3     programa_decl -> cuerpo_programa
Rule 4     declaraciones -> DECL lista_declaraciones
Rule 5     lista_declaraciones -> declaracion lista_declaraciones
Rule 6     lista_declaraciones -> declaracion
Rule 7     declaracion -> tipo lista_variables PC
Rule 8     tipo -> TIPO_INT
Rule 9     tipo -> TIPO_CAD
Rule 10    tipo -> TIPO_BOOL
Rule 11    lista_variables -> ID COMA lista_variables
Rule 12    lista_variables -> ID
Rule 13    cuerpo_programa -> INICIO instrucciones FIN
Rule 14    instrucciones -> instruccion instrucciones
Rule 15    instrucciones -> instruccion
Rule 16    instruccion -> asignacion
Rule 17    instruccion -> llamada_funcion
Rule 18    instruccion -> estructura_control
Rule 19    estructura_control -> si_entonces
Rule 20    estructura_control -> mientras_hacer
Rule 21    estructura_control -> para_hacer
Rule 22    si_entonces -> SI PAREN expresion TESIS instruccion
Rule 23    si_entonces -> SI PAREN expresion TESIS instruccion SINO instruccion
Rule 24    mientras_hacer -> MIENTRAS PAREN expresion TESIS instruccion
Rule 25    para_hacer -> PARA PAREN asignacion expresion PC expresion TESIS instruccion
Rule 26    asignacion -> ID ASIG expresion PC
Rule 27    expresion -> expresion MAS expresion
Rule 28    expresion -> expresion MENOS expresion
Rule 29    expresion -> expresion MUL expresion
Rule 30    expresion -> expresion DIV expresion
Rule 31    expresion -> MENOS expresion
Rule 32    expresion -> PAREN expresion TESIS
Rule 33    expresion -> ID
Rule 34    expresion -> CINT
Rule 35    expresion -> CAD
Rule 36    llamada_funcion -> IMPCAD PAREN parametro TESIS PC
Rule 37    llamada_funcion -> IMPDIG PAREN parametro TESIS PC
Rule 38    llamada_funcion -> LEERDIG PAREN ID TESIS PC
Rule 39    parametro -> CAD
Rule 40    parametro -> ID

Terminals, with rules where they appear

AND                  : 
ASIG                 : 26
CAD                  : 35 39
CINT                 : 34
COMA                 : 11
DECL                 : 4
DIV                  : 30
ERROR                : 
ERROR_IDENTIFICADOR  : 
ERROR_IDENTIFICADOR_SIM : 
FALS                 : 
FIN                  : 13
ID                   : 1 11 12 26 33 38 40
IGUAL                : 
IMPBOOL              : 
IMPCAD               : 36
IMPDIG               : 37
IN                   : 
INICIO               : 13
INTER                : 
LEERBOOL             : 
LEERCAD              : 
LEERDIG              : 38
MAS                  : 27
MENOS                : 28 31
MIENTRAS             : 24
MUL                  : 29
NOT                  : 
OR                   : 
PARA                 : 25
PAREN                : 22 23 24 25 32 36 37 38
PC                   : 7 25 26 36 37 38
PROG                 : 1
SI                   : 22 23
SIGDIF               : 
SIGMAYOR             : 
SIGMENOR             : 
SINO                 : 23
TESIS                : 22 23 24 25 32 36 37 38
TIPO                 : 
TIPO_BOOL            : 10
TIPO_CAD             : 9
TIPO_INT             : 8
UNION                : 
VERD                 : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 16 25
cuerpo_programa      : 2 3
declaracion          : 5 6
declaraciones        : 2
estructura_control   : 18
expresion            : 22 23 24 25 25 26 27 27 28 28 29 29 30 30 31 32
instruccion          : 14 15 22 23 23 24 25
instrucciones        : 13 14
lista_declaraciones  : 4 5
lista_variables      : 7 11
llamada_funcion      : 17
mientras_hacer       : 20
para_hacer           : 21
parametro            : 36 37
programa             : 0
programa_decl        : 1
si_entonces          : 19
tipo                 : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROG ID programa_decl

    PROG            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROG . ID programa_decl

    ID              shift and go to state 3


state 3

    (1) programa -> PROG ID . programa_decl
    (2) programa_decl -> . declaraciones cuerpo_programa
    (3) programa_decl -> . cuerpo_programa
    (4) declaraciones -> . DECL lista_declaraciones
    (13) cuerpo_programa -> . INICIO instrucciones FIN

    DECL            shift and go to state 7
    INICIO          shift and go to state 8

    programa_decl                  shift and go to state 4
    declaraciones                  shift and go to state 5
    cuerpo_programa                shift and go to state 6

state 4

    (1) programa -> PROG ID programa_decl .

    $end            reduce using rule 1 (programa -> PROG ID programa_decl .)


state 5

    (2) programa_decl -> declaraciones . cuerpo_programa
    (13) cuerpo_programa -> . INICIO instrucciones FIN

    INICIO          shift and go to state 8

    cuerpo_programa                shift and go to state 9

state 6

    (3) programa_decl -> cuerpo_programa .

    $end            reduce using rule 3 (programa_decl -> cuerpo_programa .)


state 7

    (4) declaraciones -> DECL . lista_declaraciones
    (5) lista_declaraciones -> . declaracion lista_declaraciones
    (6) lista_declaraciones -> . declaracion
    (7) declaracion -> . tipo lista_variables PC
    (8) tipo -> . TIPO_INT
    (9) tipo -> . TIPO_CAD
    (10) tipo -> . TIPO_BOOL

    TIPO_INT        shift and go to state 13
    TIPO_CAD        shift and go to state 14
    TIPO_BOOL       shift and go to state 15

    lista_declaraciones            shift and go to state 10
    declaracion                    shift and go to state 11
    tipo                           shift and go to state 12

state 8

    (13) cuerpo_programa -> INICIO . instrucciones FIN
    (14) instrucciones -> . instruccion instrucciones
    (15) instrucciones -> . instruccion
    (16) instruccion -> . asignacion
    (17) instruccion -> . llamada_funcion
    (18) instruccion -> . estructura_control
    (26) asignacion -> . ID ASIG expresion PC
    (36) llamada_funcion -> . IMPCAD PAREN parametro TESIS PC
    (37) llamada_funcion -> . IMPDIG PAREN parametro TESIS PC
    (38) llamada_funcion -> . LEERDIG PAREN ID TESIS PC
    (19) estructura_control -> . si_entonces
    (20) estructura_control -> . mientras_hacer
    (21) estructura_control -> . para_hacer
    (22) si_entonces -> . SI PAREN expresion TESIS instruccion
    (23) si_entonces -> . SI PAREN expresion TESIS instruccion SINO instruccion
    (24) mientras_hacer -> . MIENTRAS PAREN expresion TESIS instruccion
    (25) para_hacer -> . PARA PAREN asignacion expresion PC expresion TESIS instruccion

    ID              shift and go to state 21
    IMPCAD          shift and go to state 22
    IMPDIG          shift and go to state 23
    LEERDIG         shift and go to state 24
    SI              shift and go to state 28
    MIENTRAS        shift and go to state 29
    PARA            shift and go to state 30

    instrucciones                  shift and go to state 16
    instruccion                    shift and go to state 17
    asignacion                     shift and go to state 18
    llamada_funcion                shift and go to state 19
    estructura_control             shift and go to state 20
    si_entonces                    shift and go to state 25
    mientras_hacer                 shift and go to state 26
    para_hacer                     shift and go to state 27

state 9

    (2) programa_decl -> declaraciones cuerpo_programa .

    $end            reduce using rule 2 (programa_decl -> declaraciones cuerpo_programa .)


state 10

    (4) declaraciones -> DECL lista_declaraciones .

    INICIO          reduce using rule 4 (declaraciones -> DECL lista_declaraciones .)


state 11

    (5) lista_declaraciones -> declaracion . lista_declaraciones
    (6) lista_declaraciones -> declaracion .
    (5) lista_declaraciones -> . declaracion lista_declaraciones
    (6) lista_declaraciones -> . declaracion
    (7) declaracion -> . tipo lista_variables PC
    (8) tipo -> . TIPO_INT
    (9) tipo -> . TIPO_CAD
    (10) tipo -> . TIPO_BOOL

    INICIO          reduce using rule 6 (lista_declaraciones -> declaracion .)
    TIPO_INT        shift and go to state 13
    TIPO_CAD        shift and go to state 14
    TIPO_BOOL       shift and go to state 15

    declaracion                    shift and go to state 11
    lista_declaraciones            shift and go to state 31
    tipo                           shift and go to state 12

state 12

    (7) declaracion -> tipo . lista_variables PC
    (11) lista_variables -> . ID COMA lista_variables
    (12) lista_variables -> . ID

    ID              shift and go to state 33

    lista_variables                shift and go to state 32

state 13

    (8) tipo -> TIPO_INT .

    ID              reduce using rule 8 (tipo -> TIPO_INT .)


state 14

    (9) tipo -> TIPO_CAD .

    ID              reduce using rule 9 (tipo -> TIPO_CAD .)


state 15

    (10) tipo -> TIPO_BOOL .

    ID              reduce using rule 10 (tipo -> TIPO_BOOL .)


state 16

    (13) cuerpo_programa -> INICIO instrucciones . FIN

    FIN             shift and go to state 34


state 17

    (14) instrucciones -> instruccion . instrucciones
    (15) instrucciones -> instruccion .
    (14) instrucciones -> . instruccion instrucciones
    (15) instrucciones -> . instruccion
    (16) instruccion -> . asignacion
    (17) instruccion -> . llamada_funcion
    (18) instruccion -> . estructura_control
    (26) asignacion -> . ID ASIG expresion PC
    (36) llamada_funcion -> . IMPCAD PAREN parametro TESIS PC
    (37) llamada_funcion -> . IMPDIG PAREN parametro TESIS PC
    (38) llamada_funcion -> . LEERDIG PAREN ID TESIS PC
    (19) estructura_control -> . si_entonces
    (20) estructura_control -> . mientras_hacer
    (21) estructura_control -> . para_hacer
    (22) si_entonces -> . SI PAREN expresion TESIS instruccion
    (23) si_entonces -> . SI PAREN expresion TESIS instruccion SINO instruccion
    (24) mientras_hacer -> . MIENTRAS PAREN expresion TESIS instruccion
    (25) para_hacer -> . PARA PAREN asignacion expresion PC expresion TESIS instruccion

    FIN             reduce using rule 15 (instrucciones -> instruccion .)
    ID              shift and go to state 21
    IMPCAD          shift and go to state 22
    IMPDIG          shift and go to state 23
    LEERDIG         shift and go to state 24
    SI              shift and go to state 28
    MIENTRAS        shift and go to state 29
    PARA            shift and go to state 30

    instruccion                    shift and go to state 17
    instrucciones                  shift and go to state 35
    asignacion                     shift and go to state 18
    llamada_funcion                shift and go to state 19
    estructura_control             shift and go to state 20
    si_entonces                    shift and go to state 25
    mientras_hacer                 shift and go to state 26
    para_hacer                     shift and go to state 27

state 18

    (16) instruccion -> asignacion .

    ID              reduce using rule 16 (instruccion -> asignacion .)
    IMPCAD          reduce using rule 16 (instruccion -> asignacion .)
    IMPDIG          reduce using rule 16 (instruccion -> asignacion .)
    LEERDIG         reduce using rule 16 (instruccion -> asignacion .)
    SI              reduce using rule 16 (instruccion -> asignacion .)
    MIENTRAS        reduce using rule 16 (instruccion -> asignacion .)
    PARA            reduce using rule 16 (instruccion -> asignacion .)
    FIN             reduce using rule 16 (instruccion -> asignacion .)
    SINO            reduce using rule 16 (instruccion -> asignacion .)


state 19

    (17) instruccion -> llamada_funcion .

    ID              reduce using rule 17 (instruccion -> llamada_funcion .)
    IMPCAD          reduce using rule 17 (instruccion -> llamada_funcion .)
    IMPDIG          reduce using rule 17 (instruccion -> llamada_funcion .)
    LEERDIG         reduce using rule 17 (instruccion -> llamada_funcion .)
    SI              reduce using rule 17 (instruccion -> llamada_funcion .)
    MIENTRAS        reduce using rule 17 (instruccion -> llamada_funcion .)
    PARA            reduce using rule 17 (instruccion -> llamada_funcion .)
    FIN             reduce using rule 17 (instruccion -> llamada_funcion .)
    SINO            reduce using rule 17 (instruccion -> llamada_funcion .)


state 20

    (18) instruccion -> estructura_control .

    ID              reduce using rule 18 (instruccion -> estructura_control .)
    IMPCAD          reduce using rule 18 (instruccion -> estructura_control .)
    IMPDIG          reduce using rule 18 (instruccion -> estructura_control .)
    LEERDIG         reduce using rule 18 (instruccion -> estructura_control .)
    SI              reduce using rule 18 (instruccion -> estructura_control .)
    MIENTRAS        reduce using rule 18 (instruccion -> estructura_control .)
    PARA            reduce using rule 18 (instruccion -> estructura_control .)
    FIN             reduce using rule 18 (instruccion -> estructura_control .)
    SINO            reduce using rule 18 (instruccion -> estructura_control .)


state 21

    (26) asignacion -> ID . ASIG expresion PC

    ASIG            shift and go to state 36


state 22

    (36) llamada_funcion -> IMPCAD . PAREN parametro TESIS PC

    PAREN           shift and go to state 37


state 23

    (37) llamada_funcion -> IMPDIG . PAREN parametro TESIS PC

    PAREN           shift and go to state 38


state 24

    (38) llamada_funcion -> LEERDIG . PAREN ID TESIS PC

    PAREN           shift and go to state 39


state 25

    (19) estructura_control -> si_entonces .

    ID              reduce using rule 19 (estructura_control -> si_entonces .)
    IMPCAD          reduce using rule 19 (estructura_control -> si_entonces .)
    IMPDIG          reduce using rule 19 (estructura_control -> si_entonces .)
    LEERDIG         reduce using rule 19 (estructura_control -> si_entonces .)
    SI              reduce using rule 19 (estructura_control -> si_entonces .)
    MIENTRAS        reduce using rule 19 (estructura_control -> si_entonces .)
    PARA            reduce using rule 19 (estructura_control -> si_entonces .)
    FIN             reduce using rule 19 (estructura_control -> si_entonces .)
    SINO            reduce using rule 19 (estructura_control -> si_entonces .)


state 26

    (20) estructura_control -> mientras_hacer .

    ID              reduce using rule 20 (estructura_control -> mientras_hacer .)
    IMPCAD          reduce using rule 20 (estructura_control -> mientras_hacer .)
    IMPDIG          reduce using rule 20 (estructura_control -> mientras_hacer .)
    LEERDIG         reduce using rule 20 (estructura_control -> mientras_hacer .)
    SI              reduce using rule 20 (estructura_control -> mientras_hacer .)
    MIENTRAS        reduce using rule 20 (estructura_control -> mientras_hacer .)
    PARA            reduce using rule 20 (estructura_control -> mientras_hacer .)
    FIN             reduce using rule 20 (estructura_control -> mientras_hacer .)
    SINO            reduce using rule 20 (estructura_control -> mientras_hacer .)


state 27

    (21) estructura_control -> para_hacer .

    ID              reduce using rule 21 (estructura_control -> para_hacer .)
    IMPCAD          reduce using rule 21 (estructura_control -> para_hacer .)
    IMPDIG          reduce using rule 21 (estructura_control -> para_hacer .)
    LEERDIG         reduce using rule 21 (estructura_control -> para_hacer .)
    SI              reduce using rule 21 (estructura_control -> para_hacer .)
    MIENTRAS        reduce using rule 21 (estructura_control -> para_hacer .)
    PARA            reduce using rule 21 (estructura_control -> para_hacer .)
    FIN             reduce using rule 21 (estructura_control -> para_hacer .)
    SINO            reduce using rule 21 (estructura_control -> para_hacer .)


state 28

    (22) si_entonces -> SI . PAREN expresion TESIS instruccion
    (23) si_entonces -> SI . PAREN expresion TESIS instruccion SINO instruccion

    PAREN           shift and go to state 40


state 29

    (24) mientras_hacer -> MIENTRAS . PAREN expresion TESIS instruccion

    PAREN           shift and go to state 41


state 30

    (25) para_hacer -> PARA . PAREN asignacion expresion PC expresion TESIS instruccion

    PAREN           shift and go to state 42


state 31

    (5) lista_declaraciones -> declaracion lista_declaraciones .

    INICIO          reduce using rule 5 (lista_declaraciones -> declaracion lista_declaraciones .)


state 32

    (7) declaracion -> tipo lista_variables . PC

    PC              shift and go to state 43


state 33

    (11) lista_variables -> ID . COMA lista_variables
    (12) lista_variables -> ID .

    COMA            shift and go to state 44
    PC              reduce using rule 12 (lista_variables -> ID .)


state 34

    (13) cuerpo_programa -> INICIO instrucciones FIN .

    $end            reduce using rule 13 (cuerpo_programa -> INICIO instrucciones FIN .)


state 35

    (14) instrucciones -> instruccion instrucciones .

    FIN             reduce using rule 14 (instrucciones -> instruccion instrucciones .)


state 36

    (26) asignacion -> ID ASIG . expresion PC
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 46

state 37

    (36) llamada_funcion -> IMPCAD PAREN . parametro TESIS PC
    (39) parametro -> . CAD
    (40) parametro -> . ID

    CAD             shift and go to state 52
    ID              shift and go to state 53

    parametro                      shift and go to state 51

state 38

    (37) llamada_funcion -> IMPDIG PAREN . parametro TESIS PC
    (39) parametro -> . CAD
    (40) parametro -> . ID

    CAD             shift and go to state 52
    ID              shift and go to state 53

    parametro                      shift and go to state 54

state 39

    (38) llamada_funcion -> LEERDIG PAREN . ID TESIS PC

    ID              shift and go to state 55


state 40

    (22) si_entonces -> SI PAREN . expresion TESIS instruccion
    (23) si_entonces -> SI PAREN . expresion TESIS instruccion SINO instruccion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 56

state 41

    (24) mientras_hacer -> MIENTRAS PAREN . expresion TESIS instruccion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 57

state 42

    (25) para_hacer -> PARA PAREN . asignacion expresion PC expresion TESIS instruccion
    (26) asignacion -> . ID ASIG expresion PC

    ID              shift and go to state 21

    asignacion                     shift and go to state 58

state 43

    (7) declaracion -> tipo lista_variables PC .

    TIPO_INT        reduce using rule 7 (declaracion -> tipo lista_variables PC .)
    TIPO_CAD        reduce using rule 7 (declaracion -> tipo lista_variables PC .)
    TIPO_BOOL       reduce using rule 7 (declaracion -> tipo lista_variables PC .)
    INICIO          reduce using rule 7 (declaracion -> tipo lista_variables PC .)


state 44

    (11) lista_variables -> ID COMA . lista_variables
    (11) lista_variables -> . ID COMA lista_variables
    (12) lista_variables -> . ID

    ID              shift and go to state 33

    lista_variables                shift and go to state 59

state 45

    (33) expresion -> ID .

    PC              reduce using rule 33 (expresion -> ID .)
    MAS             reduce using rule 33 (expresion -> ID .)
    MENOS           reduce using rule 33 (expresion -> ID .)
    MUL             reduce using rule 33 (expresion -> ID .)
    DIV             reduce using rule 33 (expresion -> ID .)
    TESIS           reduce using rule 33 (expresion -> ID .)


state 46

    (26) asignacion -> ID ASIG expresion . PC
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . MUL expresion
    (30) expresion -> expresion . DIV expresion

    PC              shift and go to state 60
    MAS             shift and go to state 61
    MENOS           shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64


state 47

    (31) expresion -> MENOS . expresion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 65

state 48

    (32) expresion -> PAREN . expresion TESIS
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 66

state 49

    (34) expresion -> CINT .

    PC              reduce using rule 34 (expresion -> CINT .)
    MAS             reduce using rule 34 (expresion -> CINT .)
    MENOS           reduce using rule 34 (expresion -> CINT .)
    MUL             reduce using rule 34 (expresion -> CINT .)
    DIV             reduce using rule 34 (expresion -> CINT .)
    TESIS           reduce using rule 34 (expresion -> CINT .)


state 50

    (35) expresion -> CAD .

    PC              reduce using rule 35 (expresion -> CAD .)
    MAS             reduce using rule 35 (expresion -> CAD .)
    MENOS           reduce using rule 35 (expresion -> CAD .)
    MUL             reduce using rule 35 (expresion -> CAD .)
    DIV             reduce using rule 35 (expresion -> CAD .)
    TESIS           reduce using rule 35 (expresion -> CAD .)


state 51

    (36) llamada_funcion -> IMPCAD PAREN parametro . TESIS PC

    TESIS           shift and go to state 67


state 52

    (39) parametro -> CAD .

    TESIS           reduce using rule 39 (parametro -> CAD .)


state 53

    (40) parametro -> ID .

    TESIS           reduce using rule 40 (parametro -> ID .)


state 54

    (37) llamada_funcion -> IMPDIG PAREN parametro . TESIS PC

    TESIS           shift and go to state 68


state 55

    (38) llamada_funcion -> LEERDIG PAREN ID . TESIS PC

    TESIS           shift and go to state 69


state 56

    (22) si_entonces -> SI PAREN expresion . TESIS instruccion
    (23) si_entonces -> SI PAREN expresion . TESIS instruccion SINO instruccion
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . MUL expresion
    (30) expresion -> expresion . DIV expresion

    TESIS           shift and go to state 70
    MAS             shift and go to state 61
    MENOS           shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64


state 57

    (24) mientras_hacer -> MIENTRAS PAREN expresion . TESIS instruccion
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . MUL expresion
    (30) expresion -> expresion . DIV expresion

    TESIS           shift and go to state 71
    MAS             shift and go to state 61
    MENOS           shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64


state 58

    (25) para_hacer -> PARA PAREN asignacion . expresion PC expresion TESIS instruccion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 72

state 59

    (11) lista_variables -> ID COMA lista_variables .

    PC              reduce using rule 11 (lista_variables -> ID COMA lista_variables .)


state 60

    (26) asignacion -> ID ASIG expresion PC .

    ID              reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    IMPCAD          reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    IMPDIG          reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    LEERDIG         reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    SI              reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    MIENTRAS        reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    PARA            reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    FIN             reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    MENOS           reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    PAREN           reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    CINT            reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    CAD             reduce using rule 26 (asignacion -> ID ASIG expresion PC .)
    SINO            reduce using rule 26 (asignacion -> ID ASIG expresion PC .)


state 61

    (27) expresion -> expresion MAS . expresion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 73

state 62

    (28) expresion -> expresion MENOS . expresion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 74

state 63

    (29) expresion -> expresion MUL . expresion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 75

state 64

    (30) expresion -> expresion DIV . expresion
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion MUL expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . MENOS expresion
    (32) expresion -> . PAREN expresion TESIS
    (33) expresion -> . ID
    (34) expresion -> . CINT
    (35) expresion -> . CAD

    MENOS           shift and go to state 47
    PAREN           shift and go to state 48
    ID              shift and go to state 45
    CINT            shift and go to state 49
    CAD             shift and go to state 50

    expresion                      shift and go to state 76

state 65

    (31) expresion -> MENOS expresion .
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . MUL expresion
    (30) expresion -> expresion . DIV expresion

    PC              reduce using rule 31 (expresion -> MENOS expresion .)
    MAS             reduce using rule 31 (expresion -> MENOS expresion .)
    MENOS           reduce using rule 31 (expresion -> MENOS expresion .)
    MUL             reduce using rule 31 (expresion -> MENOS expresion .)
    DIV             reduce using rule 31 (expresion -> MENOS expresion .)
    TESIS           reduce using rule 31 (expresion -> MENOS expresion .)

  ! MAS             [ shift and go to state 61 ]
  ! MENOS           [ shift and go to state 62 ]
  ! MUL             [ shift and go to state 63 ]
  ! DIV             [ shift and go to state 64 ]


state 66

    (32) expresion -> PAREN expresion . TESIS
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . MUL expresion
    (30) expresion -> expresion . DIV expresion

    TESIS           shift and go to state 77
    MAS             shift and go to state 61
    MENOS           shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64


state 67

    (36) llamada_funcion -> IMPCAD PAREN parametro TESIS . PC

    PC              shift and go to state 78


state 68

    (37) llamada_funcion -> IMPDIG PAREN parametro TESIS . PC

    PC              shift and go to state 79


state 69

    (38) llamada_funcion -> LEERDIG PAREN ID TESIS . PC

    PC              shift and go to state 80


state 70

    (22) si_entonces -> SI PAREN expresion TESIS . instruccion
    (23) si_entonces -> SI PAREN expresion TESIS . instruccion SINO instruccion
    (16) instruccion -> . asignacion
    (17) instruccion -> . llamada_funcion
    (18) instruccion -> . estructura_control
    (26) asignacion -> . ID ASIG expresion PC
    (36) llamada_funcion -> . IMPCAD PAREN parametro TESIS PC
    (37) llamada_funcion -> . IMPDIG PAREN parametro TESIS PC
    (38) llamada_funcion -> . LEERDIG PAREN ID TESIS PC
    (19) estructura_control -> . si_entonces
    (20) estructura_control -> . mientras_hacer
    (21) estructura_control -> . para_hacer
    (22) si_entonces -> . SI PAREN expresion TESIS instruccion
    (23) si_entonces -> . SI PAREN expresion TESIS instruccion SINO instruccion
    (24) mientras_hacer -> . MIENTRAS PAREN expresion TESIS instruccion
    (25) para_hacer -> . PARA PAREN asignacion expresion PC expresion TESIS instruccion

    ID              shift and go to state 21
    IMPCAD          shift and go to state 22
    IMPDIG          shift and go to state 23
    LEERDIG         shift and go to state 24
    SI              shift and go to state 28
    MIENTRAS        shift and go to state 29
    PARA            shift and go to state 30

    instruccion                    shift and go to state 81
    asignacion                     shift and go to state 18
    llamada_funcion                shift and go to state 19
    estructura_control             shift and go to state 20
    si_entonces                    shift and go to state 25
    mientras_hacer                 shift and go to state 26
    para_hacer                     shift and go to state 27

state 71
